--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
   },
   "dependencies": {
     "@eslint/config-array": "^0.18.0",
-    "@eslint/object-schema": "^2.1.4",
+    "@payloadcms/db-mongodb": "3.0.0-beta.119",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "framer-motion": "^11.11.10",
+    "mongodb": "6.3.0",
     "next": "^15.0.1",
+    "payload": "^3.0.0-beta.119",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "ts-node": "^10.9.2",
+    "sass": "^1.80.4",
+    "sharp": "^0.33.5",
     "zod": "^3.23.8"
   },
   "devDependencies": {
