--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "predeploy": "echo 'rogue.marianmares.cz' > ./out/CNAME"
   },
   "dependencies": {
     "@eslint/config-array": "^0.18.0",
@@ -14,12 +15,12 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "framer-motion": "^11.11.10",
+    "lucide-react": "^0.453.0",
     "next": "^15.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "ts-node": "^10.9.2",
-    "zod": "^3.23.8",
-    "lucide-react": "0.453.0"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
