--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "google-maps": "^4.3.3",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.453.0",
+    "mongodb": "^6.12.0",
     "next": "^15.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "sendgrid": "^5.2.3",
     "ts-node": "^10.9.2",
     "zod": "^3.23.8"
   },
