--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@eslint/config-array": "^0.18.0",
     "@eslint/object-schema": "^2.1.4",
+    "@sendgrid/mail": "^8.1.4",
     "@types/leaflet": "^1.9.15",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
