--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "predeploy": "mkdir -p out && echo 'rogue.marianmares.cz' > out/CNAME"
+    "lint": "next lint"
   },
   "dependencies": {
     "@eslint/config-array": "^0.18.0",
