--- a/package.json
+++ b/package.json
@@ -9,34 +9,39 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^3.7.4",
     "@eslint/config-array": "^0.18.0",
-    "@eslint/object-schema": "^2.1.4",
+    "@eslint/object-schema": "^2.1.6",
     "@sendgrid/mail": "^8.1.4",
-    "@types/leaflet": "^1.9.15",
-    "dotenv": "^16.4.5",
-    "express": "^4.21.1",
-    "framer-motion": "^11.11.10",
+    "@swc/helpers": "^0.5.15",
+    "@types/leaflet": "^1.9.16",
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "framer-motion": "^11.18.2",
     "google-maps": "^4.3.3",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.453.0",
-    "mongodb": "^6.12.0",
-    "next": "^15.0.1",
+    "mongodb": "^6.13.0",
+    "next": "^15.1.6",
+    "next-auth": "^4.24.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "sendgrid": "^5.2.3",
     "ts-node": "^10.9.2",
-    "zod": "^3.23.8"
+    "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/express": "^5.0.0",
     "@types/google.maps": "^3.58.1",
-    "@types/node": "^22.8.1",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^9.13.0",
+    "@types/node": "^22.12.0",
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18.3.5",
+    "eslint": "^9.19.0",
     "eslint-config-next": "15.0.1",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "postcss": "^8.5.1",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.7.3"
   }
 }
