--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@sendgrid/mail": "^8.1.4",
     "@swc/helpers": "^0.5.15",
     "@types/leaflet": "^1.9.16",
+    "@vercel/analytics": "^1.4.1",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
@@ -24,7 +25,7 @@
     "lucide-react": "^0.453.0",
     "mongodb": "^6.13.0",
     "next": "^15.1.6",
-    "next-auth": "^4.24.11",
+    "next-auth": "^4.24.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "sendgrid": "^5.2.3",
