--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@sendgrid/mail": "^8.1.4",
     "@swc/helpers": "^0.5.15",
     "@types/leaflet": "^1.9.16",
+    "@types/recharts": "^1.8.29",
     "@vercel/analytics": "^1.4.1",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.7",
@@ -28,6 +29,7 @@
     "next-auth": "^4.24.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "recharts": "^2.15.1",
     "sendgrid": "^5.2.3",
     "ts-node": "^10.9.2",
     "zod": "^3.24.1"
