--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,13 @@
+// .eslintrc.json
 {
   "extends": "next/core-web-vitals",
   "rules": {
-    "react/no-unescaped-entities": "off"
+    "react/no-unescaped-entities": "off",
+    "no-unused-vars": "warn",
+    "no-console": "warn",
+    "@next/next/no-img-element": "warn",
+    "react/display-name": "warn",
+    "react-hooks/rules-of-hooks": "error",
+    "react-hooks/exhaustive-deps": "warn"
   }
 }
