--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint --max-warnings=0",
+    "lint:fix": "next lint --fix"
   },
   "dependencies": {
     "@auth/mongodb-adapter": "^3.7.4",
@@ -45,6 +46,6 @@
     "eslint-config-next": "15.0.1",
     "postcss": "^8.5.1",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5.7.3"
+    "typescript": "^5.0.4"
   }
 }
